--- a/src/sass/components/_Header.scss
+++ b/src/sass/components/_Header.scss
@@ -3,6 +3,7 @@
   font-family: "Bilbo Swash Caps", cursive;
   display: grid;
   grid-template-columns: repeat(2, minmax(150px, 1fr));
+  z-index: 10;
 }
 
 .header__container1 {
@@ -21,17 +22,15 @@
 }
 
 .header__container2 {
-  //   grid-column-start: 2;
-  //   grid-column-end: 3;
-  //   display: grid;
-  //   grid-template-columns: repeat(4, 1fr);
   display: flex;
   flex: 2;
   justify-content: flex-end;
+  position: absolute;
+  right: 0;
   img {
     position: relative;
     width: 100px;
-    // object-fit: cover;
+    z-index: 10;
     &:hover {
       cursor: pointer;
       top: 5px;
