--- a/src/sass/components/_Layout.scss
+++ b/src/sass/components/_Layout.scss
@@ -2,4 +2,15 @@
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   margin: 0 5%;
+  z-index: 1;
+}
+
+.title-name {
+  font-family: "Bilbo Swash Caps", cursive;
+  color: white;
+  position: absolute;
+  z-index: 1;
+  font-size: 80px;
+  margin: 0;
+  left: 8%;
 }
