--- a/src/sass/components/_Pages.scss
+++ b/src/sass/components/_Pages.scss
@@ -5,4 +5,28 @@
   //temporal
   position: relative;
   top: 150px;
+  z-index: 1;
+}
+
+.Character {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  text-align: center;
+  gap: 10px;
+  img {
+    width: 100px;
+    object-fit: cover;
+    position: relative;
+  }
+}
+
+.Character__Info {
+  display: flex;
+  div {
+    flex: 1;
+  }
+}
+
+.modal {
+  display: none;
 }
