--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,6 +3,17 @@
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   margin: 0 5%;
+  z-index: 1;
+}
+
+.title-name {
+  font-family: "Bilbo Swash Caps", cursive;
+  color: white;
+  position: absolute;
+  z-index: 1;
+  font-size: 80px;
+  margin: 0;
+  left: 8%;
 }
 
 .home {
@@ -10,6 +21,30 @@
   grid-column-end: 13;
   position: relative;
   top: 150px;
+  z-index: 1;
+}
+
+.Character {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  text-align: center;
+  gap: 10px;
+}
+.Character img {
+  width: 100px;
+  object-fit: cover;
+  position: relative;
+}
+
+.Character__Info {
+  display: flex;
+}
+.Character__Info div {
+  flex: 1;
+}
+
+.modal {
+  display: none;
 }
 
 .header {
@@ -17,6 +52,7 @@
   font-family: "Bilbo Swash Caps", cursive;
   display: grid;
   grid-template-columns: repeat(2, minmax(150px, 1fr));
+  z-index: 10;
 }
 
 .header__container1 {
@@ -38,10 +74,13 @@
   display: flex;
   flex: 2;
   justify-content: flex-end;
+  position: absolute;
+  right: 0;
 }
 .header__container2 img {
   position: relative;
   width: 100px;
+  z-index: 10;
 }
 .header__container2 img:hover {
   cursor: pointer;
@@ -64,7 +103,7 @@
 }
 .MenuCard__Card img {
   width: 100%;
-  border-radius: 25px;
+  border-radius: 20px;
   filter: grayscale(0.5);
 }
 .MenuCard__Card img:hover {
@@ -75,14 +114,18 @@
   top: 50%;
   width: 100%;
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
+  object-fit: cover;
+  transition: 2s;
 }
-.MenuCard__Card h1:hover {
-  opacity: 0.5;
+.MenuCard__Card:hover {
+  cursor: pointer;
 }
-.MenuCard__Card h1:hover .MenuCard {
-  filter: grayscale(1);
+.MenuCard__Card:hover h1 {
+  display: none;
+  transition: 2s;
 }
+
 .Card__Container {
   border-radius: 25px;
   width: 100%;
@@ -93,17 +136,29 @@
     grid-template-columns: repeat(8, 1fr);
     margin: 0 3%;
   }
+
+  [class=Character] {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 @media only screen and (max-width: 768px) {
   [class=Layout] {
     grid-template-columns: repeat(8, 1fr);
     margin: 0 3%;
   }
+
+  [class=Character] {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 @media only screen and (max-width: 425px) {
   [class=Layout] {
     grid-template-columns: repeat(4, 1fr);
     margin: 0;
+  }
+
+  [class=Character] {
+    grid-template-columns: auto;
   }
 
   [class=MenuCard] {
