--- a/src/sass/components/_Pages.scss
+++ b/src/sass/components/_Pages.scss
@@ -29,4 +29,17 @@
 
 .modal {
   display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  // overflow: auto;
+  z-index: 200;
+  background-color: rgba(0, 0, 0, 0.6);
+  align-items: center;
+  justify-content: center;
+}
+
+.details {
+  color: white;
+  background-color: aqua;
 }
