--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -45,6 +45,18 @@
 
 .modal {
   display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 200;
+  background-color: rgba(0, 0, 0, 0.6);
+  align-items: center;
+  justify-content: center;
+}
+
+.details {
+  color: white;
+  background-color: aqua;
 }
 
 .header {
