--- a/src/sass/components/_Pages.scss
+++ b/src/sass/components/_Pages.scss
@@ -18,6 +18,16 @@
     object-fit: cover;
     position: relative;
   }
+  button {
+    border: none;
+    padding: 5px;
+    margin: 5px 0;
+    width: 50%;
+    border-radius: 25px;
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
 
 .Character__Info {
@@ -32,14 +42,121 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  // overflow: auto;
+  overflow: auto;
   z-index: 200;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.829);
   align-items: center;
   justify-content: center;
+
+  button {
+    position: absolute;
+    right: 10px;
+    top: 5px;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    border: none;
+    background-color: #5e181865;
+    color: #fff;
+    &:hover {
+      background-color: #9b091fd7;
+    }
+    &::before {
+      content: "X";
+    }
+  }
 }
 
 .details {
+  position: relative;
   color: white;
-  background-color: aqua;
+  background-color: #0e0e0e;
+  margin: 0;
+  width: max-content;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  padding: 10px;
+  justify-items: center;
+  section {
+    display: grid;
+  }
+
+  h2 {
+    display: inline;
+    margin: 0;
+    color: #9b091e;
+  }
+
+  h3 {
+    display: inline;
+    margin: 0;
+  }
+  img {
+    height: 300px;
+    object-fit: contain;
+    float: left;
+  }
+  div {
+    flex-wrap: wrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5%;
+    flex-direction: column;
+  }
+}
+
+.Book {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.Book__Item {
+  text-align: center;
+  width: -webkit-fill-available;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+
+  img {
+    width: 300px;
+  }
+
+  .Info__Text {
+    padding: 20px;
+    p {
+      font-size: 25px;
+    }
+  }
+}
+
+.Spell {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: auto;
+}
+.spell__Item {
+  display: flex;
+  width: -webkit-fill-available;
+  align-items: center;
+  justify-content: center;
+  img {
+    width: 100px;
+  }
+}
+.Spell__Item__Text {
+  width: -webkit-fill-available;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  h1 {
+    margin: 10px 0;
+  }
+  p {
+    margin: 0%;
+    display: block;
+    font-size: 25px;
+  }
 }
