--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -35,6 +35,16 @@
   object-fit: cover;
   position: relative;
 }
+.Character button {
+  border: none;
+  padding: 5px;
+  margin: 5px 0;
+  width: 50%;
+  border-radius: 25px;
+}
+.Character button:hover {
+  cursor: pointer;
+}
 
 .Character__Info {
   display: flex;
@@ -48,15 +58,120 @@
   position: fixed;
   width: 100%;
   height: 100%;
+  overflow: auto;
   z-index: 200;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.829);
   align-items: center;
   justify-content: center;
 }
+.modal button {
+  position: absolute;
+  right: 10px;
+  top: 5px;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  border: none;
+  background-color: #5e181865;
+  color: #fff;
+}
+.modal button:hover {
+  background-color: #9b091fd7;
+}
+.modal button::before {
+  content: "X";
+}
 
 .details {
+  position: relative;
   color: white;
-  background-color: aqua;
+  background-color: #0e0e0e;
+  margin: 0;
+  width: max-content;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  padding: 10px;
+  justify-items: center;
+}
+.details section {
+  display: grid;
+}
+.details h2 {
+  display: inline;
+  margin: 0;
+  color: #9b091e;
+}
+.details h3 {
+  display: inline;
+  margin: 0;
+}
+.details img {
+  height: 300px;
+  object-fit: contain;
+  float: left;
+}
+.details div {
+  flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5%;
+  flex-direction: column;
+}
+
+.Book {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.Book__Item {
+  text-align: center;
+  width: -webkit-fill-available;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+}
+.Book__Item img {
+  width: 300px;
+}
+.Book__Item .Info__Text {
+  padding: 20px;
+}
+.Book__Item .Info__Text p {
+  font-size: 25px;
+}
+
+.Spell {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: auto;
+}
+
+.spell__Item {
+  display: flex;
+  width: -webkit-fill-available;
+  align-items: center;
+  justify-content: center;
+}
+.spell__Item img {
+  width: 100px;
+}
+
+.Spell__Item__Text {
+  width: -webkit-fill-available;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+.Spell__Item__Text h1 {
+  margin: 10px 0;
+}
+.Spell__Item__Text p {
+  margin: 0%;
+  display: block;
+  font-size: 25px;
 }
 
 .header {
@@ -175,6 +290,18 @@
 
   [class=MenuCard] {
     flex-direction: column;
+  }
+
+  [class=details] {
+    grid-template-columns: auto;
+  }
+
+  [class*=Book__Item] {
+    flex-wrap: wrap;
+  }
+
+  [class*=spell__Item] {
+    flex-wrap: wrap;
   }
 }
 
