--- a/src/sass/components/_MenuCard.scss
+++ b/src/sass/components/_MenuCard.scss
@@ -1,9 +1,10 @@
 .MenuCard {
   // display: flex;
   // flex-wrap: wrap;
-  gap: 100px;
+  gap: 50px;
   display: grid;
   grid-template-rows: auto;
+  padding-bottom: 40px;
 }
 
 .MenuCard__Card {
@@ -11,11 +12,14 @@
   width: 100%;
   display: flex;
   align-items: center;
+  transition: 0.5s;
 
   img {
     position: relative;
-    width: 200px;
-    height: -webkit-fill-available;
+    // width: 200px;
+    aspect-ratio: 16/9;
+    // height: -webkit-fill-available;
+    height: 130px;
     object-fit: cover;
     border-radius: 20px;
     filter: grayscale(0.5);
@@ -26,24 +30,24 @@
     text-align: center;
     font-size: 45px;
     left: 20px;
-    color: white;
   }
   &:hover {
     cursor: pointer;
 
     img {
       transition: 2s;
+      filter: grayscale(0);
     }
 
     .loadMenu {
       width: 50%;
       height: 130px;
       position: absolute;
-      transition: 1s;
+      transition: 0.5s;
     }
 
     h1 {
-      transition: 1s;
+      transition: 0.3s;
       color: white;
     }
   }
@@ -51,11 +55,11 @@
 
 .loadMenu {
   width: 100px;
-  // height: 130px;
+  height: 130px;
   border-radius: 25px;
   position: absolute;
   left: 0;
-  transition: 1s;
+  transition: 0.5s;
 }
 
 .Card__Container {
