--- a/src/sass/components/_Pages.scss
+++ b/src/sass/components/_Pages.scss
@@ -1,12 +1,12 @@
 .home {
   grid-column-start: 1;
   grid-column-end: 13;
-
-  //temporal
   position: relative;
   top: 150px;
   z-index: 1;
 }
+
+//page Characters
 
 .Character__Page {
   grid-column-start: 1;
@@ -77,6 +77,7 @@
   }
 }
 
+//page books
 .Book {
   grid-column-start: 1;
   grid-column-end: 13;
@@ -108,6 +109,8 @@
   }
 }
 
+//page spells
+
 .Spell {
   grid-column-start: 1;
   grid-column-end: 12;
@@ -129,5 +132,88 @@
     margin: 0%;
     display: block;
     font-size: 25px;
+  }
+}
+
+//page aboutme
+
+.Aboutme {
+  grid-column-start: 1;
+  grid-column-end: 13;
+  position: relative;
+  top: 150px;
+}
+
+.Aboutme__cards {
+  display: grid;
+  grid-template-areas:
+    "main main"
+    "c1 c2";
+  justify-items: center;
+  padding: 10px;
+  // width: 80%;
+}
+
+.name {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-area: main;
+
+  img {
+    width: 100px;
+  }
+  h2 {
+    margin: 0;
+  }
+}
+
+.componentes {
+  grid-area: c2;
+
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 40px;
+
+  img {
+    width: 50px;
+    aspect-ratio: 1/1;
+    transition: 1s;
+    &:hover {
+      transform: scale(1.2);
+      transition: 1s;
+    }
+  }
+
+  div {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+  }
+}
+
+.contactme {
+  grid-area: c1;
+  display: flex;
+  padding: 30px;
+  a {
+    transition: 1s;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    justify-content: center;
+    gap: 10px;
+    &:hover {
+      transform: scale(1.2);
+      transition: 1s;
+    }
+  }
+  img {
+    width: 50px;
+    aspect-ratio: 1/1;
   }
 }
