--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -50,19 +50,25 @@
   [class="MenuCard__Card"] {
     flex-direction: column;
     &:hover {
-      box-shadow: 0px 0px 5px black;
-
       .loadMenu {
-        width: 50%;
-        left: 25%;
-        top: 68%;
+        width: 80%;
+        left: 20%;
+        top: 75%;
         height: 45px;
         position: absolute;
         transition: 1s;
       }
     }
   }
-
+  [class*="loadMenu"] {
+    width: 250px;
+    height: 1px;
+    top: 100%;
+    border-radius: 25px;
+    position: absolute;
+    left: 25%;
+    transition: 2s;
+  }
   [class="details"] {
     grid-template-columns: auto;
   }
@@ -71,5 +77,11 @@
   }
   [class*="spell__Item"] {
     flex-wrap: wrap;
+  }
+  [class*="Aboutme__cards"] {
+    grid-template-areas:
+      "main"
+      "c1"
+      "c2";
   }
 }
