--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,7 +8,6 @@
 
 .title-name {
   font-family: "Bilbo Swash Caps", cursive;
-  color: white;
   position: absolute;
   z-index: 1;
   font-size: 80px;
@@ -170,11 +169,85 @@
   font-size: 25px;
 }
 
+.Aboutme {
+  grid-column-start: 1;
+  grid-column-end: 13;
+  position: relative;
+  top: 150px;
+}
+
+.Aboutme__cards {
+  display: grid;
+  grid-template-areas: "main main" "c1 c2";
+  justify-items: center;
+  padding: 10px;
+}
+
+.name {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-area: main;
+}
+.name img {
+  width: 100px;
+}
+.name h2 {
+  margin: 0;
+}
+
+.componentes {
+  grid-area: c2;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 40px;
+}
+.componentes img {
+  width: 50px;
+  aspect-ratio: 1/1;
+  transition: 1s;
+}
+.componentes img:hover {
+  transform: scale(1.2);
+  transition: 1s;
+}
+.componentes div {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: center;
+}
+
+.contactme {
+  grid-area: c1;
+  display: flex;
+  padding: 30px;
+}
+.contactme a {
+  transition: 1s;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  justify-content: center;
+  gap: 10px;
+}
+.contactme a:hover {
+  transform: scale(1.2);
+  transition: 1s;
+}
+.contactme img {
+  width: 50px;
+  aspect-ratio: 1/1;
+}
+
 .header {
   height: 50px;
   font-family: "Bilbo Swash Caps", cursive;
   display: grid;
-  grid-template-columns: repeat(2, minmax(150px, 1fr));
+  grid-template-columns: repeat(3, minmax(100px, 1fr));
   z-index: 10;
 }
 
@@ -184,11 +257,11 @@
 }
 .header__container1 h1 {
   position: relative;
-  left: 10vw;
+  left: 7vw;
 }
 .header__container1 img {
   position: relative;
-  left: 8vw;
+  left: 7vw;
   height: 50px;
   object-fit: cover;
 }
@@ -210,10 +283,24 @@
   top: 5px;
 }
 
+.Menu {
+  display: flex;
+  gap: 20px;
+}
+.Menu:hover .Menu__header:not(:hover) {
+  color: #272726;
+}
+
+.Menu__header {
+  font-size: 35px;
+  color: white;
+}
+
 .MenuCard {
-  gap: 100px;
+  gap: 50px;
   display: grid;
   grid-template-rows: auto;
+  padding-bottom: 40px;
 }
 
 .MenuCard__Card {
@@ -221,11 +308,12 @@
   width: 100%;
   display: flex;
   align-items: center;
+  transition: 0.5s;
 }
 .MenuCard__Card img {
   position: relative;
-  width: 200px;
-  height: -webkit-fill-available;
+  aspect-ratio: 16/9;
+  height: 130px;
   object-fit: cover;
   border-radius: 20px;
   filter: grayscale(0.5);
@@ -236,31 +324,32 @@
   text-align: center;
   font-size: 45px;
   left: 20px;
-  color: white;
 }
 .MenuCard__Card:hover {
   cursor: pointer;
 }
 .MenuCard__Card:hover img {
   transition: 2s;
+  filter: grayscale(0);
 }
 .MenuCard__Card:hover .loadMenu {
   width: 50%;
   height: 130px;
   position: absolute;
-  transition: 1s;
+  transition: 0.5s;
 }
 .MenuCard__Card:hover h1 {
-  transition: 1s;
+  transition: 0.3s;
   color: white;
 }
 
 .loadMenu {
   width: 100px;
+  height: 130px;
   border-radius: 25px;
   position: absolute;
   left: 0;
-  transition: 1s;
+  transition: 0.5s;
 }
 
 .Card__Container {
@@ -317,16 +406,23 @@
   [class=MenuCard__Card] {
     flex-direction: column;
   }
-  [class=MenuCard__Card]:hover {
-    box-shadow: 0px 0px 5px black;
-  }
   [class=MenuCard__Card]:hover .loadMenu {
-    width: 50%;
-    left: 25%;
-    top: 68%;
+    width: 80%;
+    left: 20%;
+    top: 75%;
     height: 45px;
     position: absolute;
     transition: 1s;
+  }
+
+  [class*=loadMenu] {
+    width: 250px;
+    height: 1px;
+    top: 100%;
+    border-radius: 25px;
+    position: absolute;
+    left: 25%;
+    transition: 2s;
   }
 
   [class=details] {
@@ -339,6 +435,10 @@
 
   [class*=spell__Item] {
     flex-wrap: wrap;
+  }
+
+  [class*=Aboutme__cards] {
+    grid-template-areas: "main" "c1" "c2";
   }
 }
 
